Kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ecommerce  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 430500291162.dkr.ecr.us-east-2.amazonaws.com/nikki-rg:springboot-app-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
      
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ecommerce  
spec:
  selector:
    app: backend
  ports:
    - port: 8090
      targetPort: 8090
  type: ClusterIP
